clusters/lab/gitops/gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: public-https
  namespace: gateway-system
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: 192.168.5.100
  listeners:
    - name: http-redirect
      hostname: "*.home.rboiko.com"
      port: 80
      protocol: HTTP
      allowedRoutes:
        kinds:
          - kind: HTTPRoute
        namespaces:
          from: Same
    - name: https-wildcard
      hostname: "*.home.rboiko.com"
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - group: ""
            kind: Secret
            name: home-lab-gateway-tls
      allowedRoutes:
        namespaces:
          from: All
    - name: http-root-redirect
      hostname: home.rboiko.com
      port: 80
      protocol: HTTP
      allowedRoutes:
        kinds:
          - kind: HTTPRoute
        namespaces:
          from: Same
    - name: https-root
      hostname: home.rboiko.com
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - group: ""
            kind: Secret
            name: home-lab-gateway-tls
      allowedRoutes:
        namespaces:
          from: All
