clusters/lab/gitops/gateway/http-to-https-redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-to-https-redirect
  namespace: gateway-system
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: public-https
      sectionName: http-redirect
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: public-https
      sectionName: http-root-redirect
  hostnames:
    - home.rboiko.com
    - "*.home.rboiko.com"
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
